new proj/src/objects/GE_AL_Equipment_Data__c.object
<CustomObject>
    <fields>
        <fullName>GE_AL_1000ft_of_Set_Depth__c</fullName>
        <label>1000&apos; of Set Depth</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_A_B__c</fullName>
        <description>A-B Insulation Resistance</description>
        <label>A-B</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_A_C__c</fullName>
        <description>A-C Insulation Resistance</description>
        <label>A-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_A_Gnd__c</fullName>
        <description>A-Gnd Insulation Resistance</description>
        <label>A-Gnd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Abrasives__c</fullName>
        <label>Abrasives</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Adapter_1__c</fullName>
        <label>Adapter (1)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Adapter_2__c</fullName>
        <label>Adapter (2)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Adapter_3__c</fullName>
        <label>Adapter (3)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Adapter_Part_1__c</fullName>
        <label>Adapter Part # (1)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Adapter_Part_2__c</fullName>
        <label>Adapter Part # (2)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Adapter_Part_3__c</fullName>
        <label>Adapter Part # (3)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Adapter_Type_1__c</fullName>
        <label>Adapter Type (1)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Adapter_Type_2__c</fullName>
        <label>Adapter Type (2)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Adapter_Type_3__c</fullName>
        <label>Adapter Type (3)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Ambient_Temp_F_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Ambient Temp F (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Ambient_Temp_F_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Ambient Temp F (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Ambient_Temp_F_C__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Ambient Temp F (C)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Amps__c</fullName>
        <label>Amps</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_And__c</fullName>
        <label>And</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Anode_Centralizer_Length__c</fullName>
        <label>Anode/Centralizer Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Anode_Centralizer_New_Used__c</fullName>
        <label>Anode/Centralizer New/Used</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Anode_Centralizer_OD__c</fullName>
        <label>Anode/Centralizer OD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Anode_Centralizer_Type__c</fullName>
        <label>Anode/Centralizer Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Armor_Cable_Condition__c</fullName>
        <label>Armor/Cable Condition</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Auto_Brand__c</fullName>
        <label>Auto Brand</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Auto_S_N__c</fullName>
        <label>Auto S/N</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Auto_Size__c</fullName>
        <label>Auto Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Avg_JT__c</fullName>
        <label>Avg JT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_BPO__c</fullName>
        <label>BPO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_B_C__c</fullName>
        <description>B-C Insulation Resistance</description>
        <label>B-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_B_Gnd__c</fullName>
        <description>B-Gnd Insulation Resistance</description>
        <label>B-Gnd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Banding_Material__c</fullName>
        <label>Banding Material</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Bands_Below_TBG_HGR__c</fullName>
        <label>Bands Below TBG HGR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Bands_Per_JT__c</fullName>
        <label>Bands Per JT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Bands_Per_Joint__c</fullName>
        <label>Bands Per Joint</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Bearing_Temp__c</fullName>
        <label>Bearing Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Beginning_Date__c</fullName>
        <label>Beginning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Break_Off_Plug__c</fullName>
        <label>Break Off Plug</label>
        <picklist>
            <picklistValues>
                <fullName>Brass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_CT_Ratio__c</fullName>
        <label>CT Ratio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_C_Gnd__c</fullName>
        <description>C-Gnd Insulation Resistance</description>
        <label>C-Gnd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Armor__c</fullName>
        <label>Cable Armor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Band_Condition__c</fullName>
        <label>Cable Band Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Length__c</fullName>
        <label>Cable Length</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Loss__c</fullName>
        <formula>( GE_AL_Volts_per_1000ft_of_Cable__c *  GE_AL_1000ft_of_Set_Depth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cable Loss</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_MLC_A_B__c</fullName>
        <label>Cable &amp; MLC A-B</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_MLC_A_C__c</fullName>
        <label>Cable &amp; MLC A-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_MLC_A_GRND__c</fullName>
        <label>Cable &amp; MLC A-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_MLC_B_C__c</fullName>
        <label>Cable &amp; MLC B-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_MLC_B_GRND__c</fullName>
        <label>Cable &amp; MLC B-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_MLC_C_GRND__c</fullName>
        <label>Cable &amp; MLC C-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Bottom_A_B__c</fullName>
        <label>Cable &amp; Motor Bottom A-B</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Bottom_A_C__c</fullName>
        <label>Cable &amp; Motor Bottom A-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Bottom_A_GRND__c</fullName>
        <label>Cable &amp; Motor Bottom A-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Bottom_B_C__c</fullName>
        <label>Cable &amp; Motor Bottom B-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Bottom_B_GRND__c</fullName>
        <label>Cable &amp; Motor Bottom B-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Bottom_C_GRND__c</fullName>
        <label>Cable &amp; Motor Bottom C-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Surface_A_B__c</fullName>
        <label>Cable &amp; Motor Surface A-B</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Surface_A_C__c</fullName>
        <label>Cable &amp; Motor Surface A-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Surface_A_GRND__c</fullName>
        <label>Cable &amp; Motor Surface A-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Surface_B_C__c</fullName>
        <label>Cable &amp; Motor Surface B-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Surface_B_GRND__c</fullName>
        <label>Cable &amp; Motor Surface B-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Motor_Surface_C_GRND__c</fullName>
        <label>Cable &amp; Motor Surface C-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Part__c</fullName>
        <label>Cable Part #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Size__c</fullName>
        <label>Cable Size</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Type__c</fullName>
        <label>Cable Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Calculated_Max_Hz__c</fullName>
        <formula>(VALUE(GE_AL_Incoming_Voltage__c) /  GE_AL_V_over_Hz_at_60_Hz__c ) * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Max Hz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cap_Line_Tube_Type_Size__c</fullName>
        <label>Cap Line Tube Type/Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Casing_Kill__c</fullName>
        <label>Casing Kill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Casing_Pressure__c</fullName>
        <label>Casing Pressure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Casing_Size_Wt_lbs__c</fullName>
        <label>Casing Size/Wt (lbs.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Check_Valve_Condition__c</fullName>
        <label>Check Valve Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Check_Valve_New_Used__c</fullName>
        <inlineHelpText>Check Valve</inlineHelpText>
        <label>New/Used (Check Valve)</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Check_Valve_Set_At__c</fullName>
        <label>Check Valve Set At</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Check_Valve_Size__c</fullName>
        <label>Check Valve Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Check_Valve__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Check Valve</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Choke__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Choke</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_AL_Connection__c</fullName>
        <label>Connection</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cont_Display__c</fullName>
        <label>Cont. Display #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Contaminants_Down_Hole__c</fullName>
        <label>Contaminants (Down Hole)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Control_Volts__c</fullName>
        <label>Control Volts</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Controller_Type__c</fullName>
        <label>Controller Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Controller__c</fullName>
        <label>Controller #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Current_Limit__c</fullName>
        <label>Current Limit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Customer_Rep_Contractor_Name__c</fullName>
        <label>Customer Rep/Contractor Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Customer__c</fullName>
        <inlineHelpText>Well Operator</inlineHelpText>
        <label>Customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_AL_DH_Loaded_Amps__c</fullName>
        <label>DH Loaded Amps</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_DH_Settle_Amps__c</fullName>
        <label>DH Settle Amps</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_DH_Start_Up_Amps__c</fullName>
        <label>DH Start-Up Amps</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Delta__c</fullName>
        <label>Delta</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Discharge_PSI_KPA__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Discharge PSI/KPA</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Discharge_Pressure__c</fullName>
        <label>Discharge Pressure</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Discharge_Size__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Discharge Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Discharge__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Discharge</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Down_Hole_Rotation__c</fullName>
        <label>Down Hole Rotation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Down_Hole_Sensor_Serial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Down Hole Sensor Serial #</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Down Hole Sensor Serial #)</relationshipLabel>
        <relationshipName>Equipment_DataFDJI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Download_to_Mobile__c</fullName>
        <formula>AND( 
NOT(ISBLANK(GE_AL_Location__c)), 
GE_AL_Location__r.GE_DS_Download_to_Mobile__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download to Mobile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drain_Valve_Condition__c</fullName>
        <label>Drain Valve Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drain_Valve_New_Used__c</fullName>
        <inlineHelpText>Drain Valve</inlineHelpText>
        <label>New/Used (Drain Valve)</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drain_Valve_Set_At__c</fullName>
        <label>Drain Valve Set At</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drain_Valve_Size_Sliding_Sleave__c</fullName>
        <label>Drain Valve Size/Sliding Sleave</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drive_Brand__c</fullName>
        <label>Drive Brand</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drive_Output_Voltage__c</fullName>
        <label>Drive Output Voltage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drive_S_N__c</fullName>
        <label>Drive S/N</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drive_Settle_Amps__c</fullName>
        <label>Drive Settle Amps</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drive_Size__c</fullName>
        <label>Drive Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Drive_Start_Up_Amps__c</fullName>
        <label>Drive Start-Up Amps</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Ending_Date__c</fullName>
        <label>Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Equip_Length__c</fullName>
        <label>Equip Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Equipment_Coating__c</fullName>
        <label>Equipment Coating</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Equipment_Data_Type__c</fullName>
        <description>Picklist values are used by Workflows to create record Names</description>
        <label>Equipment Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Down Hole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESP Observation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPS Obervation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Startup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPS Installation and Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Expire__c</fullName>
        <label>Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Ext_Intake_Gas_Sep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ext (Intake/Gas Sep)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_Failed_Date__c</fullName>
        <label>Failed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Field_Pressure__c</fullName>
        <label>Field Pressure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Foreign_Material_Intake_Gas_Sep__c</fullName>
        <label>Foreign Material (Intake/Gas Sep)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Fuse_Type_Size__c</fullName>
        <label>Fuse Type/Size</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_GAS_MCF__c</fullName>
        <label>GAS MCF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Gas__c</fullName>
        <label>Gas</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Gassy__c</fullName>
        <label>Gassy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Good_Bad__c</fullName>
        <label>Good/Bad</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_H2O_BPD__c</fullName>
        <label>H2O BPD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_HDTC_Running_Motor_Amps_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>HDTC Running Motor Amps (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_HDTC_Running_Motor_Amps_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>HDTC Running Motor Amps (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_HDTC_Running_Motor_Amps_C__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>HDTC Running Motor Amps (C)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_High_Trip_01__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <inlineHelpText>Intake PSI/KPA</inlineHelpText>
        <label>High Trip (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_High_Trip_02__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <inlineHelpText>Discharge PSI/KPA</inlineHelpText>
        <label>High Trip (2)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_High_Trip_03__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <inlineHelpText>Tank Level (ft)</inlineHelpText>
        <label>High Trip (3)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Horizontal_Angularity_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Horizontal Angularity (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Horizontal_Angularity_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Horizontal Angularity (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Horizontal_Offset_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Horizontal Offset (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Horizontal_Offset_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Horizontal Offset (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Incoming_Amps__c</fullName>
        <label>Incoming Amps</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Incoming_Voltage_P_G__c</fullName>
        <label>Incoming Voltage P-G</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Incoming_Voltage_P_P__c</fullName>
        <label>Incoming Voltage P-P</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Incoming_Voltage__c</fullName>
        <label>Incoming Voltage</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Inspected_By__c</fullName>
        <label>Inspected By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Inspected_Date__c</fullName>
        <description>Date inspection was performed.</description>
        <label>Inspected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data</relationshipLabel>
        <relationshipName>Equipment_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Int_Intake_Gas_Sep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Int (Intake/Gas Sep)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_Int_Setting__c</fullName>
        <label>Int. Setting</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Int_Temp_Kill__c</fullName>
        <label>Int. Temp Kill</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Int_Temperature__c</fullName>
        <label>Int. Temperature</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Intake_Gas_SEP_Serial_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake/Gas SEP Serial # (1)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Intake/Gas SEP Serial # (1))</relationshipLabel>
        <relationshipName>Equipment_Data8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Intake_Gas_SEP_Serial_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake/Gas SEP Serial # (2)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Intake/Gas SEP Serial # (2))</relationshipLabel>
        <relationshipName>Equipment_Data9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Intake_PSI_kPA__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Intake PSI/kPA</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Intake_Pressure__c</fullName>
        <label>Intake Pressure</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Intake_Setting__c</fullName>
        <label>Intake Setting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_JNTS__c</fullName>
        <label># JNTS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Job_Number__c</fullName>
        <label>Job Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_KB__c</fullName>
        <label>KB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_KVA__c</fullName>
        <label>KVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Lease_Field__c</fullName>
        <label>Lease Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Length_1__c</fullName>
        <label>Length (1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Length_2__c</fullName>
        <label>Length (2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Length_3__c</fullName>
        <label>Length (3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Liner_Size__c</fullName>
        <label>Liner Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Loaded_Voltage_P_G__c</fullName>
        <label>Loaded Voltage P-G</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Loaded_Voltage_P_P__c</fullName>
        <label>Loaded Voltage P-P</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Loaded__c</fullName>
        <label>Loaded</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Location_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment Data</relationshipLabel>
        <relationshipName>Equipment_Data</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>